K8S/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers: 
        - name: auth-service
          image: auth-service:latest
          imagePullPolicy: IfNotPresent         # NOTE: This is used to get images from the local computer
          ports:
            - containerPort: 5080               # NOTE: Change the port depending on your need. Make sure you also change the targetPorts in the cluster IP
            - containerPort: 5081               # The first port is used for REST and the second port is used for gRPC
          volumeMounts:
            - name: auth-data-protection
              mountPath: /data-protection
      volumes:
        - name: auth-data-protection
          persistentVolumeClaim:
            claimName: auth-data-protection-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - name: auth-service-rest
      protocol: TCP
      port: 5080                    # NOTE: Change the ports depending on your need
      targetPort: 5080
    - name: auth-service-grpc
      protocol: TCP
      port: 5081                    # NOTE: Change the ports depending on your need
      targetPort: 5081
