K8S/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 15672          # NOTE: Change the port depending on your need. Make sure you also change the targetPort in the cluster IP
              name: rbmq-mgmt-port
            - containerPort: 5672           # NOTE: Change the port depending on your need. Make sure you also change the targetPort in the cluster IP
              name: rbmq-msg-port
          volumeMounts:
            - name: rabbitmq-volume
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbitmq-volume
          persistentVolumeClaim:
            claimName: rabbitmq-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: rbmq-mgmt-port
      protocol: TCP
      port: 15672               # NOTE: Change the ports depending on your need
      targetPort: 15672
    - name: rbmq-msg-port
      protocol: TCP
      port: 5672                # NOTE: Change the ports depending on your need
      targetPort: 5672
